--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <main>
+    <div class="section two">
+        <h2>Section 2: Two-Column Layout</h2>
+        <div class="box">
+          <h2>Coloum 1</h2>
+          <p>
+            This is the first Column, You can place text, images, or other
+            elements here
+          </p>
+        </div>
+    </main>
 </body>
 </html>
