--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="section three">
+        <h2>Section 3: Image Gallery</h2>
+        <img src="" alt="Media here" />
+        <img src="" alt="Media here" />
+        <img src="" alt="Media here" />
+      </div>
 </body>
 </html>
