--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+          <img src="" alt="img" />
+          <h1>Section 1</h1>
+          <h1>Section 2</h1>
+          <h1>Section 3</h1>
+          <h1>Section 4</h1>
+          <h1>Section 5</h1>
+        </nav>
+      </header>
+    <div class="section four">
+        <div>
+          <h2>Section 4: Full width with Text and Image</h2>
+          <p>
+            This section combines a code block with a large image next to it,
+            The text can describe the image or alter
+          </p>
+        </div>
+        <img style="height: 400px; width: 600px" src="" alt="" />
+      </div>
 </body>
 </html>
