--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="section five">
+        <h2>Section 5: List Layout</h2>
+        <ul>
+          <li>Item 1: Description of Item 1.</li>
+          <li>Item 1: Description of Item 2.</li>
+          <li>Item 1: Description of Item 3.</li>
+          <li>Item 1: Description of Item 4.</li>
+        </ul>
+      </div>
+    </main>
+    <footer>
+      <p>@ 2024 Your Company All rights Reserved</p>
+    </footer>
 </body>
 </html>
